--- a/01_materials/labs/03b_pipeline.ipynb
+++ b/01_materials/labs/03b_pipeline.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext dotenv\n",
+    "%reload_ext dotenv\n",
     "%dotenv \n",
     "import os\n",
     "import sys\n",
@@ -555,7 +555,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -569,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
