--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -36,16 +36,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "jupyter": {
      "is_executing": true
     }
    },
+   "outputs": [],
    "source": [
     "import dask.dataframe as dd"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,7 +67,7 @@
     "from glob import glob\n",
     "\n",
     "# Write your code below.\n",
-    "\n"
+    "#changes\n"
    ]
   },
   {
@@ -170,7 +170,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -184,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
