--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "## Prerequisites\n",
     "\n",
-    "+ This notebook assumes that price data is available to you in the environment variable `PRICE_DATA`. If you have not done so, then execute the notebook `01_materials/labs/2_data_engineering.ipynb` to create this data set.\n"
+    "+ This notebook assumes that price data is available to you in the environment variable `PRICE_DATA`. If you have not done so, then execute the notebook `production_2_data_engineering.ipynb` to create this data set.\n"
    ]
   },
   {
@@ -28,10 +28,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cannot find .env file\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your code below.\n",
-    "\n"
+    "%reload_ext dotenv\n",
+    "%dotenv "
    ]
   },
   {
@@ -66,8 +75,7 @@
     "import os\n",
     "from glob import glob\n",
     "\n",
-    "# Write your code below.\n",
-    "#changes\n"
+    "# Write your code below.\n"
    ]
   },
   {
