--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -97,25 +97,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the libraries as required."
+    "# Loading the libraries as required.\n",
+    "import pandas as pd \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 517 entries, 0 to 516\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column   Non-Null Count  Dtype  \n",
+      "---  ------   --------------  -----  \n",
+      " 0   coord_x  517 non-null    int64  \n",
+      " 1   coord_y  517 non-null    int64  \n",
+      " 2   month    517 non-null    object \n",
+      " 3   day      517 non-null    object \n",
+      " 4   ffmc     517 non-null    float64\n",
+      " 5   dmc      517 non-null    float64\n",
+      " 6   dc       517 non-null    float64\n",
+      " 7   isi      517 non-null    float64\n",
+      " 8   temp     517 non-null    float64\n",
+      " 9   rh       517 non-null    int64  \n",
+      " 10  wind     517 non-null    float64\n",
+      " 11  rain     517 non-null    float64\n",
+      " 12  area     517 non-null    float64\n",
+      "dtypes: float64(8), int64(3), object(2)\n",
+      "memory usage: 52.6+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>coord_x</th>\n",
+       "      <th>coord_y</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>ffmc</th>\n",
+       "      <th>dmc</th>\n",
+       "      <th>dc</th>\n",
+       "      <th>isi</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>rh</th>\n",
+       "      <th>wind</th>\n",
+       "      <th>rain</th>\n",
+       "      <th>area</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>mar</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>86.2</td>\n",
+       "      <td>26.2</td>\n",
+       "      <td>94.3</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>51</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>oct</td>\n",
+       "      <td>tue</td>\n",
+       "      <td>90.6</td>\n",
+       "      <td>35.4</td>\n",
+       "      <td>669.1</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>oct</td>\n",
+       "      <td>sat</td>\n",
+       "      <td>90.6</td>\n",
+       "      <td>43.7</td>\n",
+       "      <td>686.9</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>mar</td>\n",
+       "      <td>fri</td>\n",
+       "      <td>91.7</td>\n",
+       "      <td>33.3</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>97</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>mar</td>\n",
+       "      <td>sun</td>\n",
+       "      <td>89.3</td>\n",
+       "      <td>51.3</td>\n",
+       "      <td>102.2</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>99</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   coord_x  coord_y month  day  ffmc   dmc     dc  isi  temp  rh  wind  rain  \\\n",
+       "0        7        5   mar  fri  86.2  26.2   94.3  5.1   8.2  51   6.7   0.0   \n",
+       "1        7        4   oct  tue  90.6  35.4  669.1  6.7  18.0  33   0.9   0.0   \n",
+       "2        7        4   oct  sat  90.6  43.7  686.9  6.7  14.6  33   1.3   0.0   \n",
+       "3        8        6   mar  fri  91.7  33.3   77.5  9.0   8.3  97   4.0   0.2   \n",
+       "4        8        6   mar  sun  89.3  51.3  102.2  9.6  11.4  99   1.8   0.0   \n",
+       "\n",
+       "   area  \n",
+       "0   0.0  \n",
+       "1   0.0  \n",
+       "2   0.0  \n",
+       "3   0.0  \n",
+       "4   0.0  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load data\n",
     "columns = [\n",
     "    'coord_x', 'coord_y', 'month', 'day', 'ffmc', 'dmc', 'dc', 'isi', 'temp', 'rh', 'wind', 'rain', 'area' \n",
     "]\n",
     "fires_dt = (pd.read_csv('../../05_src/data/fires/forestfires.csv', header = 0, names = columns))\n",
-    "fires_dt.info()\n"
+    "fires_dt.info()\n",
+    "fires_dt.head()\n"
    ]
   },
   {
@@ -423,7 +593,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -437,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
