Create features dataframe and target data

--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -302,14 +302,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Creating features dataframe (X)\n",
+    "X = fires_dt.drop(columns='area')  # 'area' is the target column, so we drop it from X\n",
+    "# Creating target series (y)\n",
+    "y = fires_dt['area']"
+   ]
   },
   {
    "cell_type": "markdown",
