Prepoc_1and Prepoc_2 created

--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -348,10 +348,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming you have already separated numeric and categorical column lists\n",
+    "# For demonstration purposes, replace these with your actual column names\n",
+    "numeric_features = ['coord_x', 'coord_y', 'ffmc', 'dmc', 'dc', 'isi', 'temp', 'rh', 'wind', 'rain']\n",
+    "categorical_features = ['month', 'day']\n",
+    "\n",
+    "# Preprocessing for numerical features (scaling only)\n",
+    "numeric_transformer = Pipeline(steps=[\n",
+    "    ('scaler', StandardScaler())  # You can change to MinMaxScaler() or RobustScaler() if desired\n",
+    "])\n",
+    "\n",
+    "# Preprocessing for categorical features (one-hot encoding)\n",
+    "categorical_transformer = Pipeline(steps=[\n",
+    "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
+    "])\n",
+    "\n",
+    "# Creating the ColumnTransformer\n",
+    "preproc1 = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numeric_transformer, numeric_features),\n",
+    "        ('cat', categorical_transformer, categorical_features)\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Example of applying preproc1 to your dataset (if needed)\n",
+    "# X_transformed = preproc1.fit_transform(X)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -367,10 +398,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import FunctionTransformer\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define the non-linear transformation using FunctionTransformer (e.g., log transformation for demonstration)\n",
+    "non_linear_transformer = Pipeline(steps=[\n",
+    "    ('log_transform', FunctionTransformer(np.log1p, validate=True))  # np.log1p applies log(1 + x), safe for zeros\n",
+    "])\n",
+    "\n",
+    "# Define the numerical transformation pipeline (scaling + optional non-linear transformation)\n",
+    "numeric_transformer_with_non_linear = Pipeline(steps=[\n",
+    "    ('scaler', StandardScaler()),  # Scaling step (you can choose a different scaler if desired)\n",
+    "    ('non_linear', non_linear_transformer)  # Applying non-linear transformation\n",
+    "])\n",
+    "\n",
+    "# Categorical transformer remains the same (one-hot encoding)\n",
+    "categorical_transformer = Pipeline(steps=[\n",
+    "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
+    "])\n",
+    "\n",
+    "# Creating the ColumnTransformer for preproc2\n",
+    "preproc2 = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numeric_transformer_with_non_linear, numeric_features),  # Apply both scaling and non-linear transformation\n",
+    "        ('cat', categorical_transformer, categorical_features)  # Apply one-hot encoding to categorical features\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Example of applying preproc2 to your dataset (if needed)\n",
+    "# X_transformed_2 = preproc2.fit_transform(X)\n"
+   ]
   },
   {
    "cell_type": "markdown",
