Regression model applied and evaluated

--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "4   0.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,23 +348,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, FunctionTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import SimpleImputer\n",
     "import pandas as pd\n",
     "\n",
-    "# Assuming you have already separated numeric and categorical column lists\n",
-    "# For demonstration purposes, replace these with your actual column names\n",
     "numeric_features = ['coord_x', 'coord_y', 'ffmc', 'dmc', 'dc', 'isi', 'temp', 'rh', 'wind', 'rain']\n",
     "categorical_features = ['month', 'day']\n",
     "\n",
     "# Preprocessing for numerical features (scaling only)\n",
     "numeric_transformer = Pipeline(steps=[\n",
-    "    ('scaler', StandardScaler())  # You can change to MinMaxScaler() or RobustScaler() if desired\n",
+    "    ('scaler', StandardScaler()) \n",
     "])\n",
     "\n",
     "# Preprocessing for categorical features (one-hot encoding)\n",
@@ -375,13 +374,15 @@
     "# Creating the ColumnTransformer\n",
     "preproc1 = ColumnTransformer(\n",
     "    transformers=[\n",
-    "        ('num', numeric_transformer, numeric_features),\n",
-    "        ('cat', categorical_transformer, categorical_features)\n",
+    "        ('num', Pipeline(steps=[\n",
+    "            ('imputer', SimpleImputer(strategy='mean')),\n",
+    "            ('scaler', StandardScaler())\n",
+    "        ]), numeric_features),\n",
+    "        ('cat', Pipeline(steps=[\n",
+    "            ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
+    "        ]), categorical_features)\n",
     "    ]\n",
-    ")\n",
-    "\n",
-    "# Example of applying preproc1 to your dataset (if needed)\n",
-    "# X_transformed = preproc1.fit_transform(X)\n"
+    ")\n"
    ]
   },
   {
@@ -398,25 +399,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import FunctionTransformer\n",
-    "import numpy as np\n",
-    "\n",
-    "# Define the non-linear transformation using FunctionTransformer (e.g., log transformation for demonstration)\n",
     "non_linear_transformer = Pipeline(steps=[\n",
-    "    ('log_transform', FunctionTransformer(np.log1p, validate=True))  # np.log1p applies log(1 + x), safe for zeros\n",
+    "    ('log_transform', FunctionTransformer(np.log1p, validate=True)) \n",
     "])\n",
     "\n",
-    "# Define the numerical transformation pipeline (scaling + optional non-linear transformation)\n",
     "numeric_transformer_with_non_linear = Pipeline(steps=[\n",
-    "    ('scaler', StandardScaler()),  # Scaling step (you can choose a different scaler if desired)\n",
+    "    ('scaler', StandardScaler()),  \n",
     "    ('non_linear', non_linear_transformer)  # Applying non-linear transformation\n",
     "])\n",
     "\n",
-    "# Categorical transformer remains the same (one-hot encoding)\n",
+    "# Categorical transformer (one-hot encoding)\n",
     "categorical_transformer = Pipeline(steps=[\n",
     "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
     "])\n",
@@ -424,13 +420,16 @@
     "# Creating the ColumnTransformer for preproc2\n",
     "preproc2 = ColumnTransformer(\n",
     "    transformers=[\n",
-    "        ('num', numeric_transformer_with_non_linear, numeric_features),  # Apply both scaling and non-linear transformation\n",
-    "        ('cat', categorical_transformer, categorical_features)  # Apply one-hot encoding to categorical features\n",
+    "        ('num', Pipeline(steps=[\n",
+    "            ('imputer', SimpleImputer(strategy='mean')),\n",
+    "            ('scaler', StandardScaler()),\n",
+    "            ('log_transform', FunctionTransformer(safe_log_transform, validate=True))\n",
+    "        ]), numeric_features),\n",
+    "        ('cat', Pipeline(steps=[\n",
+    "            ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
+    "        ]), categorical_features)\n",
     "    ]\n",
-    ")\n",
-    "\n",
-    "# Example of applying preproc2 to your dataset (if needed)\n",
-    "# X_transformed_2 = preproc2.fit_transform(X)\n"
+    ")"
    ]
   },
   {
@@ -456,39 +455,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pipeline A = preproc1 + baseline\n"
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV, cross_val_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pipeline B = preproc2 + baseline\n"
+    "# Pipeline A = preproc1 + baseline\n",
+    "model_pipeline_1 = Pipeline(steps=[\n",
+    "    ('preprocessing', preproc1),  \n",
+    "    ('regressor', KNeighborsRegressor())\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pipeline C = preproc1 + advanced model\n"
+    "# Pipeline B = preproc2 + baseline\n",
+    "model_pipeline_2= Pipeline(steps=[\n",
+    "    ('preprocessing', preproc2),  \n",
+    "    ('regressor', KNeighborsRegressor())  \n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pipeline C = preproc1 + advanced model\n",
+    "model_pipeline_3= Pipeline(steps=[\n",
+    "    ('preprocessing', preproc1),  \n",
+    "    ('regressor', RandomForestRegressor())  \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Pipeline D = preproc2 + advanced model\n",
-    "\n",
+    "model_pipeline_4= Pipeline(steps=[\n",
+    "    ('preprocessing', preproc2),  \n",
+    "    ('regressor', RandomForestRegressor())  \n",
+    "])\n",
     "    "
    ]
   },
@@ -505,38 +531,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuning hyperparameters for: KNN with Preproc1\n",
+      "KNN with Preproc1 - Best Parameters: {'regressor__n_neighbors': 9}\n",
+      "KNN with Preproc1 - Best CV Score (MSE): 2253.9980\n",
+      "----------------------------------------\n",
+      "Tuning hyperparameters for: KNN with Preproc2\n",
+      "KNN with Preproc2 - Best Parameters: {'regressor__n_neighbors': 9}\n",
+      "KNN with Preproc2 - Best CV Score (MSE): 2348.9530\n",
+      "----------------------------------------\n",
+      "Tuning hyperparameters for: RF with Preproc1\n",
+      "RF with Preproc1 - Best Parameters: {'regressor__max_depth': 10, 'regressor__n_estimators': 200}\n",
+      "RF with Preproc1 - Best CV Score (MSE): 2741.1440\n",
+      "----------------------------------------\n",
+      "Tuning hyperparameters for: RF with Preproc2\n",
+      "RF with Preproc2 - Best Parameters: {'regressor__max_depth': 15, 'regressor__n_estimators': 50}\n",
+      "RF with Preproc2 - Best CV Score (MSE): 2679.4504\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "# Parameter grids for each pipeline\n",
+    "knn_params = {'regressor__n_neighbors': [3, 5, 7, 9]}  # For KNN\n",
+    "rf_params = {\n",
+    "    'regressor__n_estimators': [50, 100, 200, 300],  # For Random Forest\n",
+    "    'regressor__max_depth': [None, 10, 15, 20]  # Experimenting with four values\n",
+    "}\n",
+    "\n",
+    "# List of model pipelines and their parameter grids\n",
+    "models = [\n",
+    "    ('KNN with Preproc1', model_pipeline_1, knn_params),\n",
+    "    ('KNN with Preproc2', model_pipeline_2, knn_params),\n",
+    "    ('RF with Preproc1', model_pipeline_3, rf_params),\n",
+    "    ('RF with Preproc2', model_pipeline_4, rf_params)\n",
+    "]\n",
+    "\n",
+    "# Perform grid search for each pipeline\n",
+    "for name, model, params in models:\n",
+    "    print(f\"Tuning hyperparameters for: {name}\")\n",
+    "    grid_search = GridSearchCV(model, params, cv=5, scoring='neg_mean_squared_error')\n",
+    "    grid_search.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Print the best parameters and cross-validated score\n",
+    "    print(f\"{name} - Best Parameters: {grid_search.best_params_}\")\n",
+    "    print(f\"{name} - Best CV Score (MSE): {-grid_search.best_score_:.4f}\")\n",
+    "    print(\"-\" * 40)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -545,6 +594,43 @@
     "# Evaluate\n",
     "\n",
     "+ Which model has the best performance?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m\n",
+      "Based on the cross-validated mean squared error (MSE) scores, the model with the best performance is the one with the lowest MSE.\n",
+      "Summary of MSE scores for each model:\n",
+      " 1. KNN with Preproc1: MSE = 2253.9980\n",
+      " 2. KNN with Preproc2: MSE = 2348.9530\n",
+      " 3. RF with Preproc1: MSE = 2741.1440\n",
+      " 4. RF with Preproc2: MSE = 2679.4504\n",
+      "\n",
+      "Conclusion:\n",
+      "The model with the best performance is the 'KNN with Preproc1' pipeline, with the lowest cross-validated MSE score of 2253.9980.\u001b[92m\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "    \"\\033[92m\\n\"\n",
+    "    \"Based on the cross-validated mean squared error (MSE) scores, the model with the best performance is the one with the lowest MSE.\\n\"\n",
+    "    \"Summary of MSE scores for each model:\\n\"\n",
+    "    \" 1. KNN with Preproc1: MSE = 2253.9980\\n\"\n",
+    "    \" 2. KNN with Preproc2: MSE = 2348.9530\\n\"\n",
+    "    \" 3. RF with Preproc1: MSE = 2741.1440\\n\"\n",
+    "    \" 4. RF with Preproc2: MSE = 2679.4504\\n\\n\"\n",
+    "    \"Conclusion:\\n\"\n",
+    "    \"The model with the best performance is the 'KNN with Preproc1' pipeline, with the lowest cross-validated MSE score of 2253.9980.\"\n",
+    "    \"\\033[92m\"\n",
+    ")\n"
    ]
   },
   {
@@ -558,10 +644,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m\n",
+      "Best-performing model model_pipeline_1 has been saved to 'best_model.pkl'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('best_model.pkl', 'wb') as f:\n",
+    "    pickle.dump(model_pipeline_1, f)\n",
+    "\n",
+    "print(\"\\033[92m\\nBest-performing model model_pipeline_1 has been saved to 'best_model.pkl'.\")\n"
+   ]
   },
   {
    "cell_type": "code",
