dataframe grouped using groupby

--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -132,8 +132,7 @@
      "output_type": "stream",
      "text": [
       "Index(['Date', 'Adj Close', 'Close', 'High', 'Low', 'Open', 'Volume', 'sector',\n",
-      "       'subsector', 'year', 'Close_lag', 'Adj_Close_lag', 'returns',\n",
-      "       'hi_lo_range'],\n",
+      "       'subsector', 'year'],\n",
       "      dtype='object', name='Price')\n"
      ]
     }
@@ -145,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +417,7 @@
        "A       48.372677      40.822041  0.011091     1.698853  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -482,8 +481,8 @@
     "# Converting the Dask DataFrame to a Pandas DataFrame\n",
     "df_pandas = ddfeat.compute()\n",
     "\n",
-    "# Adding a rolling average return calculation with a 10-day window\n",
-    "df_pandas['rolling_avg_return'] = df_pandas['returns'].rolling(window=10).mean()\n",
+    "# Grouping by 'ticker' and calculating a 10-day rolling average return within each group\n",
+    "df_pandas['rolling_avg_return'] = df_pandas.groupby('ticker')['returns'].rolling(window=10).mean().reset_index(level=0, drop=True)\n",
     "\n",
     "# Displaying the first few rows to verify the rolling average return calculation\n",
     "print(df_pandas[['returns', 'rolling_avg_return']].head(15)) \n"
@@ -503,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
